Updated Hollox.html, removed unnecessary files, and added images folder

--- a/Hollox.html
+++ b/Hollox.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="website/Hollox logo dark 1.svg" alt="Hollox Logo" class="logo-image">
+        <img src="images/Hollox logo dark 1.svg" alt="Hollox Logo" class="logo-image">
     </header>
 
     <section class="hero-section">
@@ -22,12 +22,12 @@
                     Build your next consultancy website within few minutes.
                 </p>
                 <div class="download-buttons">
-                    <img src="website/App Store.svg" alt="App Store">
-                    <img src="website/Play Store.svg" alt="Google Play">
+                    <img src="images/App Store.svg" alt="App Store">
+                    <img src="images/Play Store.svg" alt="Google Play">
                 </div>
             </div>
             <div class="hero-right-container">
-                <img class="crypto-image" src="website/Mocks iphone 1.svg" alt="Crypto App Preview">
+                <img class="crypto-image" src="images/Mocks iphone 1.svg" alt="Crypto App Preview">
             </div>
         </div>
     </section>
@@ -39,7 +39,7 @@
         </div>
         <div class="bills-frame">
             <div class="left-image">
-                <img src="website/bills.svg" alt="Pay bills">
+                <img src="images/bills.svg" alt="Pay bills">
             </div>
             <div class="section-content">
                 <div class="title-300">
@@ -52,9 +52,9 @@
             </div>
         </div>
         <div class="under-images">
-            <img src="website/Easy.svg" alt="Easy" class="logo-easy">
-            <img src="website/Safe.svg" alt="Safe" class="logo-safe">
-            <img src="website/Competitive.svg" alt="Competitive" class="logo-competitive">
+            <img src="images/Easy.svg" alt="Easy" class="logo-easy">
+            <img src="images/Safe.svg" alt="Safe" class="logo-safe">
+            <img src="images/Competitive.svg" alt="Competitive" class="logo-competitive">
         </div>
     </section>
 
@@ -69,21 +69,21 @@
             </div>
         </div>
         <div class="Phone-image">
-            <img src="website/Phone.svg" alt="Phone">
+            <img src="images/Phone.svg" alt="Phone">
         </div>
     </section>
 
     <section class="half-frame">
         <div class="left-image">
-            <img src="website/Half.svg" alt="Half" class="left-image-2">
+            <img src="images/Half.svg" alt="Half" class="left-image-2">
         </div>
         <div class="half-content">
             <div class="title-200">
                 Over <span class="highlight-200">200</span> Coins available
             </div>
             <div class="download-buttons-2">
-                <img src="website/App Store.svg" alt="App Store">
-                <img src="website/Play Store.svg" alt="Google Play">
+                <img src="images/App Store.svg" alt="App Store">
+                <img src="images/Play Store.svg" alt="Google Play">
             </div>
         </div>
     </section>
@@ -92,16 +92,16 @@
         <div class="footer-content">
             <div class="all-content">
                 <div class="logo-footer">
-                    <img src="website/Hollox footer.svg" alt="Hollox" class="logo-down">
+                    <img src="images/Hollox footer.svg" alt="Hollox" class="logo-down">
                     <p class="footer-long-text">
                         With lots of unique blocks, you can easily build a page without coding.
                         Build your next landing page.
                     </p>
                     <div class="footer-social-icons">
-                        <img src="website/logo-twitter.svg" alt="Twitter">
-                        <img src="website/logo-facebook.svg" alt="Facebook">
-                        <img src="website/logo-instagram.svg" alt="Instagram">
-                        <img src="website/logo-linkedin.svg" alt="LinkedIn">
+                        <img src="images/logo-twitter.svg" alt="Twitter">
+                        <img src="images/logo-facebook.svg" alt="Facebook">
+                        <img src="images/logo-instagram.svg" alt="Instagram">
+                        <img src="images/logo-linkedin.svg" alt="LinkedIn">
                     </div>
                 </div>
                 <div class="Company-footer">
